# ros-protobuf-bridge

./: .gitignore  CMakeLists.txt  package.xml
manual-gen/: BarPlus_ros.h  Bar_ros.h
manual-gen/python/ros_protobuf_bridge/msg/: Bar.py
msg/: Foo.msg
proto/: Bar.proto
proto_msg/: Bar.proto  BarPlus.proto
python/ros_protobuf_bridge/msg/: Bar.py  Bar_pb2.py  __init__.py
src/: bag_reader.cpp  bag_reader.py  pub.cpp  pub.py  sub.cpp  sub.py
