<package>
  <name>ros_protobuf_bridge</name>
  <version>0.1.0</version>
  <description>
    Protobug msg bridge for ROS
  </description>
  <author>Ammar Husain</author>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>
  <url>http://github.com/ethz-asl/ros-system-monitor</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
